--- a/styles/header.css
+++ b/styles/header.css
@@ -1,6 +1,6 @@
 .header-container {
   width: 100%;
-  height: 80px;
+  height: 90px;
 }
 
 .header-subcontainer {
@@ -34,11 +34,12 @@
 }
 
 .menu a {
-  height: calc(100% - 3px);
+  height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
   font-size: 16px;
+  font-weight: 400;
   text-decoration: none;
   color: #353535;
   padding: 0 10px;
@@ -47,7 +48,7 @@
 
 .menu a:hover {
   background-color: #E6E6E6;
-  border-color: #FFC220;
+  border-color: #c72222;
 }
 
 /* Mobile screen */
@@ -55,7 +56,6 @@
   display: none;
   width: 100%;
   height: 100%;
-  box-sizing: border-box;
   padding: 0 20px;
 }
 
