--- a/styles/header.css
+++ b/styles/header.css
@@ -1,81 +1,155 @@
-.header-container {
+header {
   width: 100%;
-  height: 90px;
+  height: 80px;
 }
 
-.header-subcontainer {
+nav {
   max-width: 1200px;
   height: 100%;
-  margin: 0 auto;
+  z-index: 999;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   padding: 0 20px;
+  margin: 0 auto !important;
+}
+
+nav #logo {
   display: flex;
-  justify-content: space-between;
   align-items: center;
 }
 
-.main-logo-container {
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.main-logo {
+nav #logo img {
   height: 70px;
+  transition: .3s;
 }
 
-.menu,
-.menu li {
-  width: auto;
-  height: 100%;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+nav #logo:hover img {
+  transform: scale(0.9);
 }
 
-.menu a {
-  height: 100%;
+nav #menu {
+  position: relative;
   display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 16px;
-  font-weight: 400;
-  text-decoration: none;
-  color: #353535;
-  padding: 0 10px;
+  height: 100%;
+}
+
+nav #menu li {
+  list-style: none;
+  padding: 0px 30px;
+  cursor: pointer;
+  line-height: 80px;
+  transition: all 0.3s ease-out;
   border-bottom: 3px solid transparent;
 }
 
-.menu a:hover {
-  background-color: #E6E6E6;
+nav #menu li:hover {
+  background: #ebebeb;
   border-color: #c72222;
 }
 
-/* Mobile screen */
-.header-subcontainer-mobile {
-  display: none;
-  width: 100%;
-  height: 100%;
-  padding: 0 20px;
+nav #menu li a {
+  text-decoration: none;
+  color: #353535;
 }
 
-.main-logo-container-mobile {
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.main-logo-mobile {
-  height: 70px;
-}
-
-@media(max-width: 1195px) {
-  .header-subcontainer {
+@media (max-width: 1195px) {
+  nav #menu {
     display: none;
   }
+}
 
-  .header-subcontainer-mobile {
-    display: block;
+#hamburger {
+  position: absolute;
+  right: 20px;
+  top: 14px;
+  z-index: 999;
+  width: 30px;
+  height: 30px;
+  cursor: pointer;
+  transition: all 0.3s ease-out;
+  visibility: hidden;
+  opacity: 0;
+}
+
+#hamburger .line {
+  height: 4px;
+  background: #353535;
+  margin: 8px auto;
+  backface-visibility: hidden;
+}
+
+#hamburger.active #one {
+  transform: rotate(45deg) translateX(6px) translateY(6px);
+}
+
+#hamburger.active #two {
+  opacity: 0;
+}
+
+#hamburger.active #three {
+  transform: rotate(-45deg) translateX(10px) translateY(-12px);
+}
+
+@media (max-width: 1195px) {
+  #hamburger {
+    visibility: visible;
+    opacity: 1;
+  }
+}
+
+.mobile-menu {
+  z-index: 1;
+  position: absolute;
+  top: 0px;
+  background: #ebebeb;
+  width: 100%;
+  height: 100%;
+  visibility: hidden;
+  opacity: 0;
+  transition: all 0.3s ease-out;
+  display: table;
+}
+
+.mobile-menu .mobile-menu__items {
+  height: 50px;
+  display: table-cell;
+  vertical-align: middle;
+}
+
+.mobile-menu .mobile-menu__items li {
+  display: block;
+  text-align: center;
+  padding: 20px 0;
+  text-align: center;
+  font-size: 35px;
+  min-height: 50px;
+  font-weight: bold;
+  cursor: pointer;
+  transition: all 0.3s ease-out;
+}
+
+.mobile-menu .mobile-menu__items li:hover {
+  color: #fff;
+}
+
+.mobile-menu .mobile-menu__items li a {
+  text-decoration: none;
+  color: #212121;
+}
+
+.mobile-menu .mobile-menu__items li:hover a {
+  transition: all 0.3s ease-out;
+  color: #c72222;
+}
+
+.mobile-menu.active {
+  visibility: visible;
+  opacity: 0.99;
+}
+
+@media (min-width: 1195px) {
+  .mobile-menu {
+    visibility: hidden !important;
   }
 }
