--- a/styles/header.css
+++ b/styles/header.css
@@ -49,6 +49,8 @@ nav #menu li:hover {
 }
 
 nav #menu li a {
+  font-size: 18px;
+  font-weight: 400;
   text-decoration: none;
   color: #353535;
 }
