--- a/styles/global.css
+++ b/styles/global.css
@@ -5,3 +5,12 @@
   font-family: "Poppins", sans-serif;
   font-weight: 600;
 }
+
+::-webkit-scrollbar {
+  width: 10px;
+  background-color: #c5c5c5;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #636363;
+}
